Fix spacing of components

--- a/src/interns/emma-hogan/profile-page/src/app/app.component.css
+++ b/src/interns/emma-hogan/profile-page/src/app/app.component.css
@@ -1,7 +1,8 @@
 .container {
     display:flex;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
 }
 .pro-pic {
     width: 50%;
